--- a/.gitmodules
+++ b/.gitmodules
@@ -32,3 +32,15 @@
 	path = vim/bundle/L9
 	url = git://github.com/vim-scripts/L9.git
 	ignore = dirty
+[submodule "vim/bundle/vim-easymotion"]
+	path = vim/bundle/vim-easymotion
+	url = git://https://github.com/Lokaltog/vim-easymotion
+	ignore = dirty
+[submodule "vim/bundle/vim-powerline"]
+	path = vim/bundle/vim-powerline
+	url = git://https://github.com/Lokaltog/vim-powerline
+	ignore = dirty
+[submodule "vim/bundle/command-t"]
+	path = vim/bundle/command-t
+	url = git://git.wincent.com/command-t.git
+	ignore = dirty
