--- a/.gitmodules
+++ b/.gitmodules
@@ -6,11 +6,11 @@
 	url = git://github.com/robbyrussell/oh-my-zsh.git
 [submodule "vim/bundle/vundle"]
 	path = vim/bundle/vundle
-	url = http://github.com/gmarik/vundle.git
+	url = git://github.com/gmarik/vundle.git
 	ignore = dirty
 [submodule "vim/bundle/vim-fugitive"]
 	path = vim/bundle/vim-fugitive
-	url = http://github.com/tpope/vim-fugitive.git
+	url = git://github.com/tpope/vim-fugitive.git
 	ignore = dirty
 [submodule "vim/bundle/command-t"]
 	path = vim/bundle/command-t
@@ -34,13 +34,9 @@
 	ignore = dirty
 [submodule "vim/bundle/vim-easymotion"]
 	path = vim/bundle/vim-easymotion
-	url = git://https://github.com/Lokaltog/vim-easymotion
+	url = git://github.com/Lokaltog/vim-easymotion
 	ignore = dirty
 [submodule "vim/bundle/vim-powerline"]
 	path = vim/bundle/vim-powerline
-	url = git://https://github.com/Lokaltog/vim-powerline
-	ignore = dirty
-[submodule "vim/bundle/command-t"]
-	path = vim/bundle/command-t
-	url = git://git.wincent.com/command-t.git
+	url = git://github.com/Lokaltog/vim-powerline
 	ignore = dirty
